# simplechat

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
application/single_app/: Dockerfile  app.py  app_settings_cache.py  config.py  config_clients.py  config_constants.py  config_database.py  conftest.py  functions_agents.py  functions_authentication.py  functions_chat.py  functions_content.py  functions_context_optimization.py  functions_conversation_metadata.py  functions_documents.py  functions_global_actions.py  functions_global_agents.py  functions_graph_communities.py  functions_graph_entities.py  functions_graph_rag.py  functions_keyvault.py  functions_malware_scanning.py  functions_mcp_catalog.py  functions_query_expansion.py  functions_reranking.py  functions_search.py  functions_settings.py  functions_skill_execution.py  functions_skills.py  functions_web_ingestion.py  plugin_validation_endpoint.py  pyproject.toml  requirements-dev.txt  requirements.txt  route_backend_chats.py  route_backend_control_center.py  route_backend_conversations.py  route_backend_documents.py  route_backend_feedback.py  route_backend_group_documents.py  (+24 more)
application/single_app/routes/: admin_activity.py  admin_approvals.py  admin_groups.py  admin_users.py  admin_workspaces.py
application/single_app/semantic_kernel_plugins/: base_plugin.py  logged_plugin_loader.py  mcp_plugin_factory.py  plugin_logging_examples.py  sql_plugin_factory.py  sql_query_plugin.py  sql_schema_plugin.py
application/single_app/services/: __init__.py  admin_metrics_service.py  ai_client_service.py  blob_service.py  chunk_service.py  document_processing.py  document_service.py  media_service.py  metadata_service.py  sharing_service.py  tag_service.py  web_search_service.py  workspace.py
application/single_app/templates/: _agent_config_info.html  _agent_examples_modal.html  _agent_modal.html  _front_door_info.html  _health_check_info.html  _key_vault_info.html  _sidebar_nav.html  _sidebar_short_nav.html  _video_indexer_info.html  _web_search_foundry_info.html  admin_feedback_review.html  admin_safety_violations.html  admin_settings.html  approvals.html  base.html  chats.html  control_center.html  group_workspaces.html  manage_group.html  manage_public_workspace.html  my_feedback.html  my_groups.html  my_public_workspaces.html  my_safety_violations.html  profile.html  public_directory.html  public_workspaces.html  skills_marketplace.html  swagger_ui.html  (+1 more)
(+127 files in other folders)
